deployments/kubernetes/base/user/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: payment-gateway
spec:
  selector:
    app: user
  ports:
    - name: http-metrics
      port: 8083
      targetPort: 8083
    - name: grpc
      port: 50053
      targetPort: 50053
  type: ClusterIP
